--- a/.github/workflows/create_report.yml
+++ b/.github/workflows/create_report.yml
@@ -1,20 +1,32 @@
 name: create_report
-on: push
+on:
+  push:
+    branches: [ main, master ]
+    paths:
+      - 'src/notebook.ipynb'
 jobs:
   create-report:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.13.3'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install nbconvert
-    - name: Generate report
-      run: jupyter nbconvert --to markdown notebook.ipynb --no-input --output report.md
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13.3'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install nbconvert
+      - name: Generate report
+        run: jupyter nbconvert --to markdown src/notebook.ipynb --no-input --output reports/pair_regression.md
+
+      - name: Commit and push generated report if changed
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "Report Generator"
+          git add reports/report.md
+          git diff --staged --quiet || git commit -m "Generated new pair_regression report in reports/pair_regression.md"
+          git push
   
