--- a/.github/workflows/create_report.yml
+++ b/.github/workflows/create_report.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "Report Generator"
-          git add reports/report.md
+          git add reports/pair_regression.md
           git diff --staged --quiet || git commit -m "Generated new pair_regression report in reports/pair_regression.md"
           git push
   
