--- a/.github/workflows/create_report.yml
+++ b/.github/workflows/create_report.yml
@@ -1,5 +1,6 @@
 name: create_report
 on:
+  workflow_dispatch:
   push:
     branches: [ main, master ]
     paths:
@@ -26,7 +27,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "Report Generator"
-          git add reports/pair_regression.md
+          git add /reports/pair_regression.md
           git diff --staged --quiet || git commit -m "Generated new pair_regression report in reports/pair_regression.md"
           git push
   
