--- a/.github/workflows/create_report.yml
+++ b/.github/workflows/create_report.yml
@@ -3,8 +3,6 @@ on:
   workflow_dispatch:
   push:
     branches: [ main, master ]
-    paths:
-      - 'src/notebook.ipynb'
 jobs:
   create-report:
     runs-on: ubuntu-latest
@@ -21,7 +19,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install nbconvert
       - name: Generate report
-        run: jupyter nbconvert --to markdown src/notebook.ipynb --no-input --output reports/pair_regression.md
+        run: jupyter nbconvert --to markdown src/notebook.ipynb --no-input --output /reports/pair_regression.md
 
       - name: Commit and push generated report if changed
         run: |
