--- a/.github/workflows/create_report.yml
+++ b/.github/workflows/create_report.yml
@@ -3,6 +3,9 @@ on:
   workflow_dispatch:
   push:
     branches: [ main, master ]
+    paths:
+      - '$GITHUB_WORKSPACE/src/notebook.ipynb'
+      - '$GITHUB_WORKSPACE/.github/workflows/create_report.yml'
 jobs:
   create-report:
     runs-on: ubuntu-latest
