--- a/.github/workflows/create_report.yml
+++ b/.github/workflows/create_report.yml
@@ -4,8 +4,7 @@ on:
   push:
     branches: [ main, master ]
     paths:
-      - '$GITHUB_WORKSPACE/src/notebook.ipynb'
-      - '$GITHUB_WORKSPACE/.github/workflows/create_report.yml'
+      - 'src/notebook.ipynb'
 jobs:
   create-report:
     runs-on: ubuntu-latest
