--- a/.github/workflows/create_report.yml
+++ b/.github/workflows/create_report.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main, master ]
     paths:
-      - 'src/notebook.ipynb'
+      - 'notebook.ipynb'
 jobs:
   create-report:
     runs-on: ubuntu-latest
@@ -21,7 +21,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install nbconvert
       - name: Generate report
-        run: jupyter nbconvert --to markdown $GITHUB_WORKSPACE/src/notebook.ipynb --no-input --output $GITHUB_WORKSPACE/reports/pair_regression.md
+        run: jupyter nbconvert --to markdown $GITHUB_WORKSPACE/notebook.ipynb --no-input --output $GITHUB_WORKSPACE/reports/pair_regression.md
 
       - name: Commit and push generated report if changed
         run: |
