--- a/.github/workflows/create_report.yml
+++ b/.github/workflows/create_report.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "Report Generator"
-          git add $GITHUB_WORKSPACE/reports/pair_regression.md
+          git add $GITHUB_WORKSPACE/reports/*
           git diff --staged --quiet || git commit -m "Generated new pair_regression report in reports/pair_regression.md"
           git push
   
