--- a/.github/workflows/create_report.yml
+++ b/.github/workflows/create_report.yml
@@ -21,13 +21,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install nbconvert
       - name: Generate report
-        run: jupyter nbconvert --to markdown notebook.ipynb --no-input --output reports/pair_regression.md
+        run: jupyter nbconvert --to markdown notebook.ipynb --no-input --output pair_regression.md
 
       - name: Commit and push generated report if changed
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "Report Generator"
           git add --all
-          git diff --staged --quiet || git commit -m "Generated new pair_regression report in reports/pair_regression.md"
+          git diff --staged --quiet || git commit -m "Generated new pair_regression report in pair_regression.md"
           git push
   
